--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "keywords": [],
   "author": {
    "name" : "VISHAL HACKER",
-   "url" : "https://git.io/prateek"
+   "url" : "https://github.com/Vishal0Hacker"
   },
   "license": "MIT",
   "dependencies": {
